syntax = "proto3";

package api.multi_channel.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/goapi/multi_channel/v1;multichannelv1";

// 多渠道集成服务，负责与其他电商平台（如 Amazon, Shopify）进行对接。
service MultiChannel {
  // 注册一个新的销售渠道配置。
  rpc RegisterChannel(RegisterChannelRequest) returns (RegisterChannelResponse);

  // 获取当前系统所有已连接的外部渠道。
  rpc ListChannels(ListChannelsRequest) returns (ListChannelsResponse);

  // 主动触发从指定渠道拉取最新订单。
  rpc SyncOrders(SyncOrdersRequest) returns (google.protobuf.Empty);

  // 查询从外部渠道同步下来的统一订单数据。
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

// 渠道配置。
message Channel {
  // 唯一 ID。
  uint64 id = 1;
  // 渠道名称。
  string name = 2;
  // 渠道类型 (AMAZON, SHOPIFY)。
  string type = 3;
  // API 访问密钥。
  string api_key = 4;
  // API 访问私钥。
  string api_secret = 5;
  // 是否激活。
  bool is_enabled = 6;
  // 录入时间。
  google.protobuf.Timestamp created_at = 7;
  // 修改时间。
  google.protobuf.Timestamp updated_at = 8;
}

// 订单商品。
message OrderItem {
  // 关联产品 ID。
  uint64 product_id = 1;
  // 标题。
  string product_name = 2;
  // 数量。
  int32 quantity = 3;
  // 单价。
  int64 price = 4;
  // SKU 码。
  string sku = 5;
}

// 买家档案。
message BuyerInfo {
  // 姓名。
  string name = 1;
  // 电子邮箱。
  string email = 2;
  // 联系电话。
  string phone = 3;
  // 国家代码。
  string country = 4;
}

// 配送详情。
message ShippingInfo {
  // 详细地址。
  string address = 1;
  // 城市。
  string city = 2;
  // 省/州。
  string state = 3;
  // 邮编。
  string zip_code = 4;
  // 国家。
  string country = 5;
}

// 本地化的外部订单。
message LocalOrder {
  // 本地系统 ID。
  uint64 id = 1;
  // 来源渠道 ID。
  uint64 channel_id = 2;
  // 渠道名。
  string channel_name = 3;
  // 渠道方原始订单号。
  string channel_order_id = 4;
  // 商品列表。
  repeated OrderItem items = 5;
  // 总额。
  int64 total_amount = 6;
  // 买家快照。
  BuyerInfo buyer_info = 7;
  // 配送快照。
  ShippingInfo shipping_info = 8;
  // 订单状态。
  string status = 9;
  // 同步时间。
  google.protobuf.Timestamp created_at = 10;
  // 最后修改。
  google.protobuf.Timestamp updated_at = 11;
}

// 注册请求。
message RegisterChannelRequest {
  // 渠道名。
  string name = 1;
  // 类别。
  string type = 2;
  // 密钥。
  string api_key = 3;
  // 私钥。
  string api_secret = 4;
  // 是否启用。
  bool is_enabled = 5;
}

// 注册响应。
message RegisterChannelResponse {
  // 渠道实体。
  Channel channel = 1;
}

// 列表请求。
message ListChannelsRequest {}

// 列表响应。
message ListChannelsResponse {
  // 渠道序列。
  repeated Channel channels = 1;
}

// 同步请求。
message SyncOrdersRequest {
  // 目标渠道。
  uint64 channel_id = 1;
}

// 订单查询请求。
message ListOrdersRequest {
  // 渠道 ID 筛选。
  uint64 channel_id = 1;
  // 状态筛选。
  string status = 2;
  // 页码。
  int32 page = 3;
  // 数量。
  int32 page_size = 4;
}

// 订单查询响应。
message ListOrdersResponse {
  // 订单记录。
  repeated LocalOrder orders = 1;
  // 总记录数。
  int64 total_count = 2;
}
